# app/controllers/api/v1/projects_controller.rb
@@ -1,11 +1,21 @@
 class Api::V1::ProjectsController < Api::V1::ApplicationController
   def index
-    @projects = Project.all.where.not(last_synced_at: nil).includes(:collective, :tags)
+    if params[:collective_id].present?
+      @collective = Collective.find_by_slug!(params[:collective_id])
+      @projects = @collective.projects.where.not(last_synced_at: nil).includes(:collective, :tags)
+    else
+      @projects = Project.all.where.not(last_synced_at: nil).includes(:collective, :tags)
+    end
     @pagy, @projects = pagy(@projects)
   end
 
   def show
-    @project = Project.find(params[:id])
+    if params[:collective_id].present?
+      @collective = Collective.find_by_slug!(params[:collective_id])
+      @project = @collective.projects.find(params[:id])
+    else
+      @project = Project.find(params[:id])
+    end
   end
 
   def lookup
