# config/routes.rb
@@ -17,7 +17,9 @@ Rails.application.routes.draw do
   namespace :api, :defaults => {:format => :json} do
     namespace :v1 do
       resources :jobs
-      resources :collectives, only: [:index, :show] 
+      resources :collectives, only: [:index, :show] do
+        resources :projects, constraints: { id: /.*/ }, only: [:index, :show]
+      end
       resources :projects, constraints: { id: /.*/ }, only: [:index, :show] do
         collection do
           get :lookup
